; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_mbx.c_fm10k_mbx_pushed_tail_len.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/intel/fm10k/extr_fm10k_mbx.c_fm10k_mbx_pushed_tail_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fm10k_mbx_info = type { i32, %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.fm10k_mbx_info*)* @fm10k_mbx_pushed_tail_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @fm10k_mbx_pushed_tail_len(%struct.fm10k_mbx_info* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.fm10k_mbx_info*, align 8
  %4 = alloca i32*, align 8
  store %struct.fm10k_mbx_info* %0, %struct.fm10k_mbx_info** %3, align 8
  %5 = load %struct.fm10k_mbx_info*, %struct.fm10k_mbx_info** %3, align 8
  %6 = getelementptr inbounds %struct.fm10k_mbx_info, %struct.fm10k_mbx_info* %5, i32 0, i32 1
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 0
  %8 = load i32*, i32** %7, align 8
  %9 = load %struct.fm10k_mbx_info*, %struct.fm10k_mbx_info** %3, align 8
  %10 = getelementptr inbounds %struct.fm10k_mbx_info, %struct.fm10k_mbx_info* %9, i32 0, i32 1
  %11 = call i32 @fm10k_fifo_tail_offset(%struct.TYPE_2__* %10, i32 0)
  %12 = sext i32 %11 to i64
  %13 = getelementptr inbounds i32, i32* %8, i64 %12
  store i32* %13, i32** %4, align 8
  %14 = load %struct.fm10k_mbx_info*, %struct.fm10k_mbx_info** %3, align 8
  %15 = getelementptr inbounds %struct.fm10k_mbx_info, %struct.fm10k_mbx_info* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %19, label %18

18:                                               ; preds = %1
  store i32 0, i32* %2, align 4
  br label %23

19:                                               ; preds = %1
  %20 = load i32*, i32** %4, align 8
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @FM10K_TLV_DWORD_LEN(i32 %21)
  store i32 %22, i32* %2, align 4
  br label %23

23:                                               ; preds = %19, %18
  %24 = load i32, i32* %2, align 4
  ret i32 %24
}

declare dso_local i32 @fm10k_fifo_tail_offset(%struct.TYPE_2__*, i32) #1

declare dso_local i32 @FM10K_TLV_DWORD_LEN(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
